# XEmu65

./: .gitignore  README.md  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/info/galu/dev/xemu65/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/roms/: ATARIBAS.ROM  ATARIOSB.ROM  ATARIXL.ROM
app/src/main/cpp/: Makefile  af80.c  af80.h  afile.c  afile.h  akey.h  antic.c  antic.h  artifact.c  artifact.h  atari.c  atari.h  atari_basic.c  atari_curses.c  atari_ps2.c  atari_rpi.c  atari_x11.c  autogen.sh  binload.c  binload.h  bit3.c  bit3.h  cartridge.c  cartridge.h  cassette.c  cassette.h  cfg.c  cfg.h  colours.c  colours.h  colours_external.c  colours_external.h  colours_ntsc.c  colours_ntsc.h  colours_pal.c  colours_pal.h  compfile.c  compfile.h  config.h  config.h.in  (+94 more)
app/src/main/cpp/jni/: androidinput.c  androidinput.h  graphics.c  graphics.h  jni.c  keys.inc  platform.c  sound.c
app/src/main/java/info/galu/dev/xemu65/: Codes.java  EmuActivity.java  EmuAudio.java  EmuRenderer.java  EmuView.java
app/src/main/java/info/galu/dev/xemu65/about/: AboutActivity.java
app/src/main/java/info/galu/dev/xemu65/behavior/: ButtonsBehavior.java  FSButtonBehavior.java  ShrinkBehavior.java
app/src/main/java/info/galu/dev/xemu65/filebrowser/: FileBrowser.java  FileDividerItemDecoration.java  FileWrapper.java  FlexibleFileAdapter.java
app/src/main/java/info/galu/dev/xemu65/machineconfig/: MachineConfig.java
app/src/main/java/info/galu/dev/xemu65/prefs/: EmuPrefsActivity.java  EmuPrefsFragment.java  SpinnerPreference.java
app/src/main/java/info/galu/dev/xemu65/qj/: DigitalJoyCallback.java  DigitalJoyDirection.java  DigitalJoyState.java  DualButton.java  DualButtonTouchListener.java  QuickJoyImpl.java  SingleButton.java  SingleButtonTouchListener.java
app/src/main/java/info/galu/dev/xemu65/savebrowser/: SaveAdapter.java  SaveBrowser.java  SaveWrapper.java
app/src/main/java/info/galu/dev/xemu65/util/: AnimUtils.java  ConfigUtils.java  FileUtils.java  JoyUtils.java  PermissionUtil.java  UIUtils.java
app/src/main/res/anim/: slide_in_top.xml  slide_out_bottom.xml
app/src/main/res/drawable/: file_divider.xml  file_selector.xml  file_wrapper_bg.xml  file_wrapper_parent_row.xml
app/src/main/res/layout/: about.xml  emulation.xml  emulation_fragment.xml  file_browser.xml  file_layout.xml  outer.xml  preference_spinner.xml  preference_spinner_item.xml  prefs.xml  quickjoy.xml  save_browser.xml
app/src/main/res/menu/: menu_about.xml  menu_emulation.xml  menu_saves.xml
app/src/main/res/raw/: third_party_license_metadata  third_party_licenses
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  library_altirraroms_strings.xml  library_atari800_strings.xml  library_fancyshowcaseview_strings.xml  library_fastscroller_strings.xml  library_flexibleadapter_strings.xml  license_gpl_2_0_strings.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: app_preferences.xml
app/src/test/java/info/galu/dev/xemu65/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
